[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qte-industrial-catalog"
dynamic = ["version"]
description = "Official industrial and scientific laboratory equipment catalog dataset by QTE Technologies."
readme = "README.md"
authors = [
    { name = "QTE Technologies Co., Ltd", email = "qtetech@gmail.com" }
]
license = { text = "MIT" }
keywords = ["qte-technologies", "industrial-equipment", "laboratory-instruments", "scientific-catalog", "dataset", "csv"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["qte_industrial_catalog"]

[tool.setuptools.package-data]
"*" = ["*.csv"]

[tool.setuptools.dynamic]
version = { attr = "qte_industrial_catalog.__init__.__version__" }
